--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,6 +42,7 @@
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
     "@fluentui/react": "^7.190.3",
+    "@liquid-state/rjsf-ionic-6": "5.0.0-beta.13",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.11",
     "@rjsf/antd": "^5.0.0-beta.13",
